# Superheavy-Survival-Audit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  RELEASE_NOTES.md  pyproject.toml  sbom.spdx.json
data/raw/: .gitignore
data/registry/: source_registry.json
docs/: RESEARCH_BOM.md
docs/charter/: REPOSITORY_CHARTER.md
docs/policy/: CLAIM_BOUNDARY_POLICY.md  DATA_VERSIONING_POLICY.md  KILL_CRITERIA_POLICY.md  RESEARCH_SCOPE_POLICY.md
docs/reference/: ARCHITECTURE_OVERVIEW.md  DEPENDENCY_MANIFEST.md  LITERATURE_BENCHMARK_TABLE_SPEC.md  REPRODUCIBILITY_MANIFEST_SPEC.md  REVIEWER_AUDIT_PACK_SPEC.md  TERMINOLOGY_GLOSSARY.md
manifests/: reproducibility_manifest.template.json
results/: .gitignore
tests/: __init__.py  test_amdc_adapter.py  test_ensdf_adapter.py  test_iaea_livechart_adapter.py  test_literature_benchmark_table.py  test_mass_residual_consensus.py  test_negative_control_audit.py  test_neighboring_chains.py  test_observability_ambiguity.py  test_observability_behavior_guards.py  test_observability_legibility.py  test_observability_scoring.py  test_processed_nuclide_snapshots.py  test_provenance_models.py  test_reproducibility_manifest.py  test_reviewer_audit_pack.py  test_route_constraints.py  test_route_feasibility_constraint_integration.py  test_route_feasibility_scoring.py  test_route_information_gain.py  test_schema_models.py  test_survival_ablation.py  test_survival_baseline_model.py  test_survival_bayesian_weights.py  test_survival_monte_carlo.py  test_survival_posterior_checks.py  test_validation_loaders.py
(+63 files in other folders)
