[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superheavy-survival-audit"
version = "0.1.0a0"
description = "Observability-first audit tooling for superheavy nuclei survival, decay legibility, and route feasibility."
authors = [
  { name = "Bryce Lovell" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = [
  "nuclear-physics",
  "superheavy-elements",
  "survival-audit",
  "decay-analysis",
  "route-feasibility",
  "observability"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
